# ChangeLog for media-plugins/live
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.165 2014/05/06 02:47:21 patrick Exp $

  06 May 2014; Patrick Lauer <patrick@gentoo.org> live-2012.01.07.ebuild,
  live-2012.09.13.ebuild, live-2013.02.11.ebuild:
  Description shortenation for more repoman happy

  18 Jun 2013; Alexis Ballier <aballier@gentoo.org> live-2013.02.11.ebuild:
  keyword ~amd64-fbsd

*live-2013.02.11 (21 Feb 2013)

  21 Feb 2013; Alexis Ballier <aballier@gentoo.org> +live-2013.02.11.ebuild:
  version bump

  01 Nov 2012; Alexis Ballier <aballier@gentoo.org> live-2012.09.13.ebuild:
  add mirror://gentoo as SRC_URI fallback since upstream removes old version
  when releasing new ones, bug #389187

  01 Nov 2012; Alexis Ballier <aballier@gentoo.org> -live-2012.08.20.ebuild:
  remove old

*live-2012.09.13 (21 Sep 2012)

  21 Sep 2012; Alexis Ballier <aballier@gentoo.org> +live-2012.09.13.ebuild:
  version bump

  21 Sep 2012; Alexis Ballier <aballier@gentoo.org> -live-2012.04.04.ebuild,
  -live-2012.04.21.ebuild, -live-2012.06.26.ebuild:
  remove old

*live-2012.08.20 (22 Aug 2012)

  22 Aug 2012; Alexis Ballier <aballier@gentoo.org> +live-2012.08.20.ebuild:
  version bump

*live-2012.06.26 (01 Jul 2012)

  01 Jul 2012; Alexis Ballier <aballier@gentoo.org> +live-2012.06.26.ebuild:
  version bump

  15 Jun 2012; Fabian Groffen <grobian@gentoo.org> live-2012.04.21.ebuild:
  Fix building shared library on Darwin

  09 May 2012; Fabian Groffen <grobian@gentoo.org> live-2012.04.21.ebuild:
  Fix compilation on Solaris as per instructions in liveMedia/include/Locale.hh

*live-2012.04.21 (24 Apr 2012)

  24 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  +files/live-recursive2.patch, +live-2012.04.21.ebuild:
  version bump. Add static-libs support and examples useflag to install test
  programs. Link programs dynamically instead of statically.

*live-2012.04.04 (05 Apr 2012)
