@@ -1,12 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX config.gentoo 480 SHA256 f8dfcb44221ab3e1fbea958b0be5d817aaebe971129def44a96fe1cb0a7d4a00 SHA512 3a2ead41b8005f2c5fb03e3911143ea1540855bf2f81058adc782dbe6d2d7a426582f923593479388ac55ff5022bcd6642de01e5e08355e3fed9162c06f3b9e1 WHIRLPOOL 57b59c912e32f084d055837fd8accfe0b61561e59dfbeb145a592ffa80aa322449c1eadfa53aedc83c8af3e6a187d1d1b3df96b0b09cdf4213e2f55375afe532
 AUX config.gentoo-so-r1 505 SHA256 be1d556e414d128ee3998b4ad640dcd2fb829430c134997134e7054edac55eaf SHA512 f9375c226eb74a1dbb79cbe98e0945f3729703fc11f6f8a1865bcd1ce6dca6024c650e6354e8ccd146c91d73f89d8db64dc239fca730d525e8679429284d38d7 WHIRLPOOL 43b56bdf9c22f5000b615b7b744906e2058828cf728617c0e6eda1057b47e481a438b3e5c8956ff72d94e19051bca32c40a83b0e2b412143ab9a7f582bbef04f
 AUX live-recursive.patch 401 SHA256 353e9d709ae60a216069d39880ae1781e2037692c77ea5aca60dfb0ca1b2ae88 SHA512 ccf3b2b46b0a72e6ef8ad048310851139ffd94d2776ce2f8afe3b3df90faead87df4a48408a928b816a296007230624981103721197ba3a003f3fbe089421364 WHIRLPOOL d8dba8f5d7614a0cd25b4db61084a8344a32e52357980176bdce9c4993521a2e1ef1b37affc0ac1f2c4564080b25348a658977e8464cd225566cf86ae72aa9ef
 AUX live-recursive2.patch 436 SHA256 7276c4465574d0862c280fe44955621b0aba02e21a2dd97ec352ccf24aaac06e SHA512 de27c72dc2d9eea18717c404a8f11ebd4bdcaeaf70056dd7d02107e867859146e16625e7204a9c50195c2ca6efcb4f38a3dc0c3da2ff3623ce29087f6c13f20d WHIRLPOOL 6f20150eaea40cf9de595c6265b80d93111c6c1ede8f67b21ec4513fcf0f063dd0c3ac367f9d07f82cd479b3a86599813b8757639635d91f793f70f67289b0f0
-DIST live.2012.01.07.tar.gz 534076 SHA256 8f3d167959b355c571caab2ee12cf70c89f09e93484f150080a59367b35c8131
+DIST live.2012.01.07.tar.gz 534076 SHA256 8f3d167959b355c571caab2ee12cf70c89f09e93484f150080a59367b35c8131 SHA512 f38e8978a630078b9933d7540fee290d08a53b17137265392be9ce04f4e0e18b52953dc9cee208d8403e484d9e67c43a6e0700495aef708279ed090dcec72744 WHIRLPOOL 0ca17abb5ced98d0327f48163f975f2f65dbb3d37984f063e4946ccbc2dcad5f57dc7cccf16e2dce1ee496cef5012ecefc2a24aca75303c602a943f6f87cd419
 DIST live.2012.09.13.tar.gz 560899 SHA256 d5667373aed8766c0a983a71b37c208976e93f181974d3a1a4ab6d9845df9be7 SHA512 344c29038e9882b3ad8678ceec7755aca5013e3b0821ca6b9d846cc1c926c1dc125b71dce91986b760793123ebff9f291aaf0dbfb3570721968f641a2b530c5d WHIRLPOOL 1b76f557e2a8441b36ceba7d274eccf4b9337224c63c1b4d4d8b3e3ba4277d9bbf4e7ebc0665e914bc476cae5178ae09ad8bc0dc1024a676ded94b293c2a0b13
 DIST live.2013.02.11.tar.gz 570837 SHA256 2cd619e61b9293a094a2cbb8dd7a7505f8e74e6197b80989093425ac78a86d83 SHA512 c0f2efbf2af06d5e5f2bc58955ca37942022a439e3c48bec06a49b636e08d4d31855e884586448c698b0c90d35ef24f282570d0026c4454c9e58855ff36713be WHIRLPOOL 121fb4815c44db793a3c225faa5c16e68a8f975e45e8c4d492886aa82a57dd1571ad14076375767524cb848336b702cccc9ab17af79787ac489b6eb789fd9bd9
 EBUILD live-2012.01.07.ebuild 3632 SHA256 e00baea0abf537d19a5219eb4b6067ee73314df66ca34cf52ea47f7a580bf469 SHA512 243bcf5b50686a487509126b6a0e08850b79d8ecc353558e54369c5ce96a801c848096a385e030f06a134b98a2a5796473b7468547b1dee50bb525f5ea9d0850 WHIRLPOOL 855f62a615a2a3da579ff4fd99373ae98687bc1b7c7fcfe67aadbc8b68f969f800ed399779a4aa7048684e79bee729df6dff39383ca9d21f5d69001c383f3893
 EBUILD live-2012.09.13.ebuild 4162 SHA256 c767a6eb367b1bd2f9e1c49e354b605803e897c892f403a538d40cd5b5f408a6 SHA512 dc2a96fabc1124673041f133ab15958bfbd4405c288845f2ec102b8bc89da37785b76fe911132dc58af89f75e0f4881b2d68106e21e6f6964c40f99b8a0daf1e WHIRLPOOL 4e23a99cc6825ac98906ce93a3d9a8e9fbc9dc99a1d4458efa1001d361cf1de3632e450e08d1a472ae7501b6695d5816504fa50441d0223c23b45e0c10d04282
-EBUILD live-2013.02.11.ebuild 4174 SHA256 580c97e99b3d41d69a75b4d53fd08858a7ffcf4353037b3bcdad8130813e0e63 SHA512 adc34bb148aab7e27b0e8b26ffe122fef4618fba4690383506e53e6407762244cd8809d85e94bb68d22284333969cd16d276160c769b62d112adaab2db31a9d0 WHIRLPOOL 479f32b8b370430b3f8ced8ea75435bb26b4fa9432a079d0489d181df0553568f9a46ed481133f4bca120f72ec1606c96354073d5f9200c63316afa15cf6e411
-MISC ChangeLog 21093 SHA256 d1e44582953777cd5b4d5c4cd2d49b5f4f83cd45716516241f77f00acf371ffd SHA512 94e4b9a756d341502b5af8fa48ae3963be80b8f35fe42604cdf64227df4832c8a069a82eb5cc68ff4e621f6c521dd1f9d3156431231806f3466e9f763ffdd0a6 WHIRLPOOL 344f79fb1e07410a81bfbd388dfc89763bef28f09e7da6a6697afc5736606a9df6680bab7f5d6b183dbb3fab200ae0c14558e71522a20ae153e47650de3f9c00
+EBUILD live-2013.02.11.ebuild 4172 SHA256 cd2e70e00c4022b8ba9d9f76b91665f6fea598bbf5a83e802c48147362e72481 SHA512 06e2d662e56d2063c74573144923c143030158d8938dce3bdef58edfa6e06410d75b70c84e6b175ce52977945d8f488c2d51ecc03b98ecdc19fe21cfec8c3a72 WHIRLPOOL 5158be268b72493c3f28542174d0c193c249d37bfee7c6cd709d9a40d213c6c2730f5f862db51134dbeeaa4859d7319eee0630868f5a039497a05040cb905f7b
+MISC ChangeLog 21191 SHA256 b319444cdfffbacd92a7aaadaab061daccdb62c36a34e3f07805a489019cf294 SHA512 83604149ab90ad7e160b2d22327cd07a9828f81dd8ea4c6ee31149c7990562a6caea4ff8a0876d77096f8545d14688098a1f21b639bdd58f4a67a34e9697be74 WHIRLPOOL e14a94b975cc9ec32ac4d56e5936f27d8d5d5fd121081b7690aacbcd11fc2ca258e186074e4e5e1cde93ea1dbd9f78c72171c94c299c0020d26a4aa626b643da
 MISC metadata.xml 225 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5 SHA512 79bf53ca11044e2cbddf8ba8c661abd2a6f7602748ef4dc1d1a3447d4f0e5a15a4d69f6e1f60e0f854465097019607a6fe7157906bc41ddfe41fb747de3ca7d6 WHIRLPOOL d257430e16390fc27365e2f58796f0f0b7c2c818f1bae76bb2a13b7971e5d33baa9d8aa33a12605653d05e0c7bd52b020aa96b737c56ac1038c32897c481a12c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlV53ooACgkQkKaRLQcq0GKZFACgmezxVPnfc0Ru5VgLnrp8lWyw
+h5cAn2gdbc8BE2VHpt7yiHx7ii47lDeT
+=ss9S
+-----END PGP SIGNATURE-----
